[gd_scene load_steps=2 format=3 uid="uid://b8kj3x4n2qp5m"]

[ext_resource type="Script" path="res://UI/EncounterUI.gd" id="1_encounter"]

[node name="EncounterUI" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_encounter")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -180.0
offset_right = 100.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="CombatLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Encounter!"
horizontal_alignment = 1

[node name="AttackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Attack"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Exit"
